<resources>
    <string name="app_name">Arduino Sensors</string>
    <string name="connection">New Connection</string>
    <string name="existing">Select Device</string>
    <string name="connect">Connect</string>
    <string name="saveButton">Save</string>
    <string name="addDevice">Add Device</string>
    <string name="temperatureSensor">Temperature</string>
    <string name="humiditySensor">Humidity </string>
    <string name="openDoor">Open the door</string>
    <string name="autoOpenDoor">Automatic door</string>
    <string name="waterPlants">Water the plants</string>
    <string name="autoWaterPlants">Automatic watering</string>

    <string name="deviceName">Device Name:</string>
    <string name="clientID">ID:</string>
    <string name="devicePort">Port:</string>
    <string name="deviceUsername">Username:</string>
    <string name="devicePassword">Password:</string>

    <string name="NewConnection">New Connection</string>
    <string name="EditDevice">Edit Device</string>
    <string name="HumidityActivity">Humidity Sensor</string>
    <string name="SensorsActivity">Sensors</string>
    <string name="TemperatureSensor">Temperature Sensor</string>
    <string name="SelectDevice">Select Device</string>



</resources>
